css bug fix: apps icon hover shadow aligns properly

--- a/style.css
+++ b/style.css
@@ -28,14 +28,18 @@ nav ul li a:hover {
     text-decoration: underline;
 }
 
+nav ul #apps-container {
+    position: relative;
+}
+
 nav ul li #hover-circle{
     width: 40px;
     height: 40px;
     border-radius: 50%;
     background-color: white;
     position: absolute;
-    top: 10px;
-    right: 127px;
+    top: -8px;
+    right: -8px;
     z-index: -1;
 }
 
